[gd_scene load_steps=4 format=2]

[ext_resource path="res://theme/Button_200x50.png" type="Texture" id=1]
[ext_resource path="res://theme/theme.tres" type="Theme" id=3]
[ext_resource path="res://scenes/hud/hud_introduction/HUDIntroduction.gd" type="Script" id=4]

[node name="HUDIntroduction" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Carousel" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue2" type="Button" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 1600.0
margin_top = 950.0
margin_right = 1800.0
margin_bottom = 1000.0
theme = ExtResource( 3 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back2" type="Button" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 250.0
margin_top = 950.0
margin_right = 450.0
margin_bottom = 1000.0
theme = ExtResource( 3 )
text = "Previous"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skip2" type="Button" parent="."]
visible = false
margin_left = 1350.0
margin_top = 950.0
margin_right = 1550.0
margin_bottom = 1000.0
text = "Skip"
icon = ExtResource( 1 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="TimerStartIntroduction" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Continue" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 1600.0
margin_top = 950.0
margin_right = 1800.0
margin_bottom = 1000.0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Continue"]
margin_right = 200.0
margin_bottom = 50.0
theme = ExtResource( 3 )
text = "Continue"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 250.0
margin_top = 950.0
margin_right = 450.0
margin_bottom = 1000.0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Back"]
margin_right = 200.0
margin_bottom = 50.0
theme = ExtResource( 3 )
text = "Back"
align = 1
valign = 1

[node name="Skip" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 1350.0
margin_top = 950.0
margin_right = 1550.0
margin_bottom = 1000.0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Skip"]
margin_right = 200.0
margin_bottom = 50.0
theme = ExtResource( 3 )
text = "Skip"
align = 1
valign = 1
[connection signal="pressed" from="Continue2" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="back2" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Skip2" to="." method="_on_Skip_pressed"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="TimerStartIntroduction" to="." method="_on_TimerStartIntroduction_timeout"]
[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Skip" to="." method="_on_Skip_pressed"]
